Сделал ещё секцию

--- a/index.html
+++ b/index.html
@@ -115,8 +115,27 @@
           </div>
         </div>
       </section>
-      <section class="pt-[97px] pb-[104px]">
-        <h2>Exclusive games on XBOX</h2>
+      <section class="bg-[url(img/games-bg.png)] pt-[97px] pb-[104px] relative bg-no-repeat bg-cover">
+        <h2 class="text-center text-[#FFFFFF] text-4xl mb-[28px]">Exclusive games on XBOX</h2>
+        <img src="img/arrow.svg" class="absolute right-[55px] top-[40%]" alt="">
+        <div class="flex pl-[66px] gap-4">
+          <div class="border border-[#8DD83D] w-[320px]">
+            <img src="img/c4.png" alt="">
+            <div class="p-[22px] bg-white">
+              <p class="text-[18px] text-[#435766] mb-[13px]">Call of Duty: WWII</p>
+              <p class="text-[21px] text-[#435766] mb-[38px]">The C.O.D.E. Bravery Pack
+                is now available in WWII</p>
+              <a href="#" class="block text-center py-[20px] bg-[#8DD83D] rounded text-white">See Details</a>
+            </div>
+          </div>
+          <div class="border border-[#8DD83D] w-[320px]">
+            <img src="img/c5.png" alt="">
+            <div class="p-[22px] bg-white h-[249px] flex flex-col">
+              <p class="text-[18px] text-[#435766] mb-[13px]">Destiny 2</p>
+              <a href="#" class="block text-center py-[20px] bg-[#8DD83D] rounded text-white mt-auto">See Details</a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
